get rid of the jump when header detaches from page layout and becomes fixed

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -295,6 +295,10 @@
 
 }
 
+.has-docked {
+  padding-top: 60px;
+}
+
 .image {
   background: black;
   height: 100vh;
